--- a/index.html
+++ b/index.html
@@ -151,13 +151,13 @@
 			<div class="agileits_banner_bottom_grids">
 				<div class="col-md-6 agileits_banner_bottom_grid_l">
 					<h4>League of Legends</h4>
-					<p>《英雄联盟》（英语：League of Legends，简称LoL）是由Riot Games开发及发行的一款多人在线战术擂台（MOBA）游戏，游戏为免费模式进行并提供付费道具服务。该游戏是受到《魔兽争霸III：冰封王座》中一个名为DotA第三方自定义地图启发而诞生[1]，且至今仍不断定期更新。
+					<p>《英雄联盟》（英语：League of Legends，简称LoL）是由Riot Games开发及发行的一款多人在线战术擂台（MOBA）游戏，游戏为免费模式进行并提供付费道具服务。该游戏是受到《魔兽争霸III：冰封王座》中一个名为DotA第三方自定义地图启发而诞生，且至今仍不断定期更新。
 
-						在《英雄联盟》里，玩家扮演一个不可见的召唤师，并操控具有独特能力的“英雄”与电脑AI或真人玩家控制的英雄对战，游戏通常的胜利目标是要摧毁对方的主要基地“水晶枢纽”，英雄在每场游戏开始时都比较弱，他们会随着游戏进展而升级，但这些数值会在下一场游戏重新开始时重置。[2]
+						在《英雄联盟》里，玩家扮演一个不可见的召唤师，并操控具有独特能力的“英雄”与电脑AI或真人玩家控制的英雄对战，游戏通常的胜利目标是要摧毁对方的主要基地“水晶枢纽”，英雄在每场游戏开始时都比较弱，他们会随着游戏进展而升级，但这些数值会在下一场游戏重新开始时重置。
 
-						《英雄联盟》受到普遍的赞誉，并在一般玩家间享有高人气。至2015年7月为止，超过1亿名玩家每个月至少玩一次《英雄联盟》，而每天都玩的玩家超过2700万，高峰时段有超过750万人同时在在线[3]。2015年7月，该公司估计全世界每个月有超过1亿5千万名的活跃玩家。[4][5]
+						《英雄联盟》受到普遍的赞誉，并在一般玩家间享有高人气。至2015年7月为止，超过1亿名玩家每个月至少玩一次《英雄联盟》，而每天都玩的玩家超过2700万，高峰时段有超过750万人同时在在线。2015年7月，该公司估计全世界每个月有超过1亿5千万名的活跃玩家
 
-						《英雄联盟》在电子竞技的领域里有着杰出的表现，自2011年起，在北美和欧洲，Riot Games分别在洛杉矶和柏林组织了英雄联盟全球总决赛，来自各地的十数个专业队伍在赛场上一决高下[6]，而香港、澳门、台湾、韩国、南美洲等地也举办过区域赛。[7]在2019年的全球总决赛总决赛中，同时有4400万在线观看的观众，以16种语言在20个平台直播。[8]</p>
+						《英雄联盟》在电子竞技的领域里有着杰出的表现，自2011年起，在北美和欧洲，Riot Games分别在洛杉矶和柏林组织了英雄联盟全球总决赛，来自各地的十数个专业队伍在赛场上一决高下，而香港、澳门、台湾、韩国、南美洲等地也举办过区域赛。在2019年的全球总决赛总决赛中，同时有4400万在线观看的观众，以16种语言在20个平台直播。</p>
 				</div>
 				<div class="col-md-6 agileits_banner_bottom_grid_r">
 					<div class="agileits_banner_btm_grid_r">
