--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
 <!-- gallery -->
 	<div class="team-bottom" id="work">
 		<div class="container">
-			<h3 class="w3l_head w3l_head1">Latest Gallery</h3>
-			<p class="w3ls_head_para w3ls_head_para1">Lorem Ipsum Dolor</p>
+			<h3 class="w3l_head w3l_head1">英雄图片</h3>
+			<p class="w3ls_head_para w3ls_head_para1">Hero pictures</p>
 			<div class="w3layouts_gallery_grids">
 				<ul class="w3l_gallery_grid" id="lightGallery">
 					<li data-title="Games" data-desc="Lorem Ipsum is simply dummy text of the printing." data-src="images/ab.jpg" data-responsive-src="images/8.jpg"> 
