--- a/index.html
+++ b/index.html
@@ -326,7 +326,8 @@
 	<div class="projects" id="projects">
 		<div class="container">
 			<div class="port-head">
-					 <h3 class="w3l_head w3l_head1">Latest News</h3>
+
+					 <h3 class="w3l_head w3l_head1">英雄皮肤</h3>
 			         <p class="w3ls_head_para w3ls_head_para1">View Our Fantasy Games</p>
 			</div>
 		</div>
