--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
 						<ul class="nav navbar-nav">
 							<li class="active"><a href="index.html"><span data-hover="首页">首页</span></a></li>
 
-							<li><a href="#about" class="scroll"><span data-hover="游戏资料">游戏资料</span></a></li>
-							<li><a href="#services" class="scroll"><span data-hover="赛事官网">赛事官网</span></a></li>
-							<li><a href="#work" class="scroll"><span data-hover="社区互动">社区互动</span></a></li>
-							<li><a href="#projects" class="scroll"><span data-hover="新闻">新闻</span></a></li>
+							<li><a href=" " class="scroll"><span data-hover="游戏资料">游戏资料</span></a></li>
+							<li><a href="" class="scroll"><span data-hover="赛事官网">赛事官网</span></a></li>
+							<li><a href="#" class="scroll"><span data-hover="社区互动">社区互动</span></a></li>
+							<li><a href="#" class="scroll"><span data-hover="新闻">新闻</span></a></li>
 							<li><a href="#mail" class="scroll"><span data-hover="个人中心">个人中心</span></a></li>
 						</ul>
 					</nav>
@@ -89,7 +89,7 @@
 							
 							<h4> K/DA ALL OUT阿卡丽</h4>
 							  <p>限时销售：10月30日12:00-11月13日9:59礼包包含：皮肤+图标(含载入边框) </p>
-							<a href="#about" class="hvr-shutter-in-horizontal scroll">Read More</a>
+							<a href="#" class="hvr-shutter-in-horizontal scroll" onclick="window.open('two/1.html')" >Read More</a>
 						</div>
 					</li>
 					<li>
@@ -220,7 +220,7 @@
 				<ul class="w3l_gallery_grid" id="lightGallery">
 					<li data-title="Games" data-desc="Lorem Ipsum is simply dummy text of the printing." data-src="images/ab.jpg" data-responsive-src="images/8.jpg"> 
 						<div class="w3layouts_gallery_grid1 box">
-							<a href="#">
+							<a href="two/1.html">
 								<img src="images/1.png" alt=" " class="img-responsive" />
 								<div class="overbox">
 									<h4 class="title overtext">暴走萝莉 金克丝</h4>
@@ -334,13 +334,15 @@
 				<div class="sreen-gallery-cursual">
 
 			<div id="owl-demo" class="owl-carousel owl-theme">
-					<div class="item">
+					<div class="item" onclick="window.open('two/1.html')">
 						<div class="projects-agile-grid-info">
 							<img src="images/s1.jpg" alt="" />
-							<div class="projects-grid-caption"> 
+							<div class="projects-grid-caption">
 
-							<h4>价格</h4>
-								<p>￥99.00</p>
+
+									<h4>价格</h4>
+									<p>￥99.00</p>
+								</a>
 							</div>
 						</div>	
 					</div>
