--- a/two/1.html
+++ b/two/1.html
@@ -1,60 +1,97 @@
 ﻿<!DOCTYPE html>
-<html lang="cn">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>super video</title>
-    <style>
-      html,body {
-    width: 100%;
-    height: 100%;
-    background-color: #292929;
-      }
-      * {
-        padding: 0;
-        margin: 0;
-      }
-      #videoContainer {
-    width: 800px;
-    height: 500px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 100px;
-      }
-    </style>
-  <link href="./lib/css/main-css.css" rel="stylesheet"></head>
-  <body>
-    <noscript>
-      <strong>We're sorry but soucecode doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="videoContainer"></div>
-    <!-- built files will be auto injected -->
-  <script type="text/javascript" src="./lib/superVideo.js"></script></body>
-  <script>
-   const nextControl = new Super.NextControl() // 实例化“下一个”按钮控件
-   const Dbspeen = new Super.Dbspeen() // 倍速控件
-    const fullScreenControl = new Super.FullScreenControl() // 实例化“全屏”控件
-    const video = new Super.Svideo('videoContainer', {
-        source: new Super.VideoSource({ // 引入视频资源
-          src: 'video/1.mp4'
-        }),
-        leftControls: [nextControl], // 控件栏左槽插入控件
-        rightControls: [Dbspeen, fullScreenControl] // 控件栏右槽插入控件
-    })
-    video.addEventListener('change', (event) => { // 监听video各属性变化
-      //  console.log(event)
-    })
-    nextControl.addEventListener('click', () => { // 监听“下一个”按钮控件点击事件
-      alert('click next menu !!!')
-    })
-    fullScreenControl.addEventListener('fullscreen', () => { // 监听进入全屏
-      console.log('is fullscreen !!!')
-    })
-    fullScreenControl.addEventListener('cancelfullscreen', () => { // 监听退出全屏
-      console.log('cancel fullscreen !!!')
-    })
-  </script>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>jQuery MP4视频播放器代码</title>
 
+<!--封装好的视频布局样式-->
+<link rel="stylesheet" href="css/jsmodern.min.css">
+
+<script src="js/jquery.min.js"></script>
+
+<!--mp4视频插件-->
+<script src="js/jsmodern.min.js"></script>
+
+<style>
+#video {
+	width: 970px;
+	height: 594px;
+	margin: 0 auto;
+	position: relative;
+}
+
+#video video {
+	width: 100%;
+	height: 100%;
+	object-fit: fill;
+}
+
+.VideoBtn {
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	display: block;
+	width: 70px;
+	height: 70px;
+	margin-left: -35px;
+	margin-top: -35px;
+	cursor: pointer;
+	z-index: 10;
+}
+</style>
+
+<!--视频插件调用方法-->
+<script>
+$(function () {
+	//视频
+	jsModern.video("#video");
+	//播放视频
+	$(".VideoBtn").click(function () {
+		var video = document.getElementById("videoShow");
+		video.play();
+		$('.VideoBtn').hide();
+	})
+	//监听视频的播放状态
+	var video = document.getElementById("videoShow");
+	video.oncanplay = function () {
+		$(".VideoBtn").show();
+		//$("#video").attr("poster","");
+	}
+	//视频播放事件
+	video.onplay = function () {
+		$("#videoShow").attr("poster", "");
+		$(".VideoBtn").hide();
+	};
+	video.onplaying = function () {
+		$(".VideoBtn").hide();
+	};
+
+	//视频暂停事件
+	video.onpause = function () {
+		$(".VideoBtn").show();
+	};
+	//点击视频周围暂停播放图片出现
+	video.onclick = function () {
+		if (video.paused) {
+			$(".VideoBtn").hide();
+			video.play();
+		} else {
+			$(".VideoBtn").show();
+			video.pause();
+		}
+	};
+})
+</script>
+
+</head>
+<body>
+
+<div id="video">
+	<video src="video/1.mp4" id="videoShow"></video>
+	<span class="VideoBtn"><img src="images/bo1.png"></span>
+</div>
+<div style="text-align:center;margin:50px 0; font:normal 14px/24px 'MicroSoft YaHei';">
+<p>适用浏览器：360、FireFox、Chrome、Opera、傲游、搜狗、世界之窗. 不支持Safari、IE8及以下浏览器。</p>
+</div>
+</body>
 </html>
-
