--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 						 
 							<h4>K/DA ALL OUT卡莎</h4>
 							   <p>限时销售：10月30日12:00-11月13日9:59礼包包含：皮肤+图标(含载入边框) </p>
-					<a href="#about" class="hvr-shutter-in-horizontal scroll">Read More</a>
+					<a href="#about" class="hvr-shutter-in-horizontal scroll" onclick="window.open('two/2.html')" >Read More</a>
 						</div>
 					</li>
 					<li>
@@ -111,7 +111,7 @@
 							
 							<h4>K/DA ALL OUT阿狸</h4>
 						   <p>限时销售：10月30日12:00-11月13日9:59礼包包含：皮肤+图标(含载入边框)</p>
-						<a href="#about" class="hvr-shutter-in-horizontal scroll">Read More</a>
+						<a href="#about" class="hvr-shutter-in-horizontal scroll" onclick="window.open('two/3.html')" >Read More</a>
 						</div>
 					</li>
 
