--- a/two/1.html
+++ b/two/1.html
@@ -1,97 +1,66 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
 <meta charset="UTF-8">
-<title>jQuery MP4视频播放器代码</title>
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>K/DA ALL OUT</title>
+	<link rel="shortcut icon" href="images/favicon.ico">
 
-<!--封装好的视频布局样式-->
-<link rel="stylesheet" href="css/jsmodern.min.css">
+<!--可无视-->
+<link rel="stylesheet" type="text/css" href="css/normalize.css" />
+<link rel="stylesheet" type="text/css" href="css/reset.css">
 
-<script src="js/jquery.min.js"></script>
+<!--布局样式，意义不大-->
+<link rel="stylesheet" href="css/demo.css">
 
-<!--mp4视频插件-->
-<script src="js/jsmodern.min.js"></script>
-
-<style>
-#video {
-	width: 970px;
-	height: 594px;
-	margin: 0 auto;
-	position: relative;
-}
-
-#video video {
-	width: 100%;
-	height: 100%;
-	object-fit: fill;
-}
-
-.VideoBtn {
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	display: block;
-	width: 70px;
-	height: 70px;
-	margin-left: -35px;
-	margin-top: -35px;
-	cursor: pointer;
-	z-index: 10;
-}
-</style>
-
-<!--视频插件调用方法-->
-<script>
-$(function () {
-	//视频
-	jsModern.video("#video");
-	//播放视频
-	$(".VideoBtn").click(function () {
-		var video = document.getElementById("videoShow");
-		video.play();
-		$('.VideoBtn').hide();
-	})
-	//监听视频的播放状态
-	var video = document.getElementById("videoShow");
-	video.oncanplay = function () {
-		$(".VideoBtn").show();
-		//$("#video").attr("poster","");
-	}
-	//视频播放事件
-	video.onplay = function () {
-		$("#videoShow").attr("poster", "");
-		$(".VideoBtn").hide();
-	};
-	video.onplaying = function () {
-		$(".VideoBtn").hide();
-	};
-
-	//视频暂停事件
-	video.onpause = function () {
-		$(".VideoBtn").show();
-	};
-	//点击视频周围暂停播放图片出现
-	video.onclick = function () {
-		if (video.paused) {
-			$(".VideoBtn").hide();
-			video.play();
-		} else {
-			$(".VideoBtn").show();
-			video.pause();
-		}
-	};
-})
-</script>
+<!--核心样式-->
+<link rel="stylesheet" href="dist/css/ckin.css">
 
 </head>
 <body>
 
-<div id="video">
-	<video src="video/1.mp4" id="videoShow"></video>
-	<span class="VideoBtn"><img src="images/bo1.png"></span>
-</div>
-<div style="text-align:center;margin:50px 0; font:normal 14px/24px 'MicroSoft YaHei';">
-<p>适用浏览器：360、FireFox、Chrome、Opera、傲游、搜狗、世界之窗. 不支持Safari、IE8及以下浏览器。</p>
+<section class="demo-section demo-section--light" id="demo">
+	<div class="container">
+		<h2 class="title heading">K/DA ALL OUT 阿卡丽 </h2>
+		
+		
+		<video poster="images/1.png" src="video/1.mp4" data-ckin="default" data-overlay="1" data-title="K/DA ALL OUT  皮肤展示台"></video>
+		
+
+		<p class="tr">
+			<a href="https://lol.qq.com/act/a20201030kda/index.html" target="_blank">Learn more</a>
+		</p>
+		
+	</div>
+</section>
+
+<section class="demo-section demo-section--light" id="skins">
+	<div class="container">
+		<h2 class="title heading">K/DA ALL OUT</h2>
+		<ul class="demo-list">
+			<li class="demo-list__item">
+				<p>K/DA ALL OUT 卡莎</p>
+				<video poster="images/2.png" src="video/2.mp4" data-ckin="default"></video>
+			</li>
+			<li class="demo-list__item">
+				<p>K/DA ALL OUT 阿狸</p>
+				<video poster="images/3.png" src="video/3.mp4" data-ckin="minimal" data-overlay="1"></video>
+			</li>
+			<li class="demo-list__item">
+				<p>K/DA ALL OUT 伊芙琳</p>
+				<video poster="images/4.png" src="video/4.mp4" data-ckin="compact" data-overlay="2"></video>
+			</li>
+			<li class="demo-list__item">
+				<p>K/DA ALL OUT 卡莎至臻</p>
+				<video poster="images/5.png" src="video/5.mp4" data-color="#fff000" data-ckin="compact" data-overlay="2"></video>
+			</li>
+
+		</ul>
+	</div>
+</section>
+
+<script src="dist/js/ckin.js"></script>
 </div>
 </body>
 </html>
