--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 							<li class="active"><a href="index.html"><span data-hover="首页">首页</span></a></li>
 
 							<li><a href="#" class="scroll" onclick="window.open('two/hero.html')"><span data-hover="游戏资料">游戏资料</span></a></li>
-							<li><a href="#" class="scroll"><span data-hover="赛事官网">周边商城</span></a></li>
-							<li><a href="#" class="scroll"><span data-hover="社区互动">社区互动</span></a></li>
+							<li><a href="#" class="scroll" onclick="window.open('two/shopping.html')"><span data-hover="周边商城">周边商城</span></a></li>
+							<li><a href="#" class="scroll" onclick="window.open('two/newone.html')"><span data-hover="咨询">资讯</span></a></li>
 							<li><a href="#" class="scroll" onclick="window.open('two/news.html')"><span data-hover="新闻">新闻</span></a></li>
 							<li><a href="#" class="scroll" onclick="window.open('two/login.html')"><span data-hover="个人中心">个人中心</span></a></li>
 						</ul>
@@ -174,12 +174,11 @@
 <!-- //about-bottom -->
 <!-- services -->
 <div class="services" id="services">
-		 <h3 class="w3l_head w3l_head1">Services</h3>
-			         <p class="w3ls_head_para w3ls_head_para1">View Our Services</p>
+
 		<div class="services-agile-w3l">
 		<div class="col-md-3 services-gd text-center">
 			<div class="hi-icon-wrap hi-icon-effect-9 hi-icon-effect-9a">
-				<a href="#" class="hi-icon"><img src="images/s1.png" alt=" " /></a>
+				<a href="#" class="hi-icon" onclick="window.open('two/index.html')"><img src="images/s1.png" alt=" " /></a>
 			</div>
 			<h4>综合</h4>
 			<p>Comprehensive</p>
@@ -187,21 +186,21 @@
 
        <div class="col-md-3 services-gd text-center">
 			<div class="hi-icon-wrap hi-icon-effect-9 hi-icon-effect-9a">
-				<a href="#" class="hi-icon"><img src="images/s2.png" alt=" " /></a>
+				<a href="#" class="hi-icon" onclick="window.open('two/index.html')"><img src="images/s2.png" alt=" " /></a>
 			</div>
 			<h4>公告</h4>
 			<p>announcement</p>
 		</div>
 		<div class="col-md-3 services-gd text-center">
 			<div class="hi-icon-wrap hi-icon-effect-9 hi-icon-effect-9a">
-				<a href="#" class="hi-icon"><img src="images/s3.png" alt=" " /></a>
+				<a href="#" class="hi-icon" onclick="window.open('two/index.html')"><img src="images/s3.png" alt=" " /></a>
 			</div>
 			<h4>赛事</h4>
 			<p>announcement</p>
 		</div>
 		<div class="col-md-3 services-gd text-center">
 			<div class="hi-icon-wrap hi-icon-effect-9 hi-icon-effect-9a">
-				<a href="#" class="hi-icon"><img src="images/s4.png" alt=" " /></a>
+				<a href="#" class="hi-icon" onclick="window.open('two/index.html')"><img src="images/s4.png" alt=" " /></a>
 			</div>
 			<h4>攻略</h4>
 			<p>announcement</p>
